name:          SubZero
version:       0.1.1
cabal-version: >=1.10
build-type:    Simple
license:       MIT
license-file:  LICENSE
maintainer:    Edgar Gomes de Araujo
stability:     experimental
homepage:
package-url:
bug-reports:   talktoedgar@gmail.com
synopsis:      Library for subdivision surfaces
description:
  Library to create and transforms smooth subdivision surfaces
  - Based on Catmull-Clark rules. But extendable for others schemes
  - Full crease/corne edge/vertex

category:      Math
author:        Edgar Gomes de Araujo

flag test
  description: Build the test suite, including an executable to run it.
  default:     False

library
  ghc-options:
    -Wall -O2 -funbox-strict-fields -fwarn-tabs -fprof-auto -fprof-cafs

  build-depends:
      base         >=4    && <5
    , containers   >=0.5
    , hammer       >=0.3
    , linear-vect  >=0.2
    , primitive    >=0.5
    , vector       >=0.10

  exposed-modules:
    SubZero
    SubZero.Internal
    SubZero.SubOne
    SubZero.SubTwo

  exposed:          True
  buildable:        True
  hs-source-dirs:   src
  default-language: Haskell2010

executable SubZero-test
  hs-source-dirs:   profile
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base     >=4    && <5
    , hammer   >=0.3
    , SubZero
    , vector   >=0.10

  if flag(test)
    buildable: True

  else
    buildable: False

test-suite SubZero-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      base              >=4    && <5
    , linear-vect       >=0.2
    , SubZero
    , tasty             >=0.7
    , tasty-hunit       >=0.8
    , tasty-quickcheck  >=0.8
    , vector            >=0.10

  ghc-options:      -Wall
  default-language: Haskell2010
